--- a/content/resume.yaml
+++ b/content/resume.yaml
@@ -14,8 +14,8 @@ basics:
       username: emilepommier
       url: https://www.linkedin.com/in/emilepommier/
 work:
-  - company: Lumen Technologies
-    position: Product Manager Customer Success
+  - company: "Lumen Technologies"
+    position: Product Manager - Customer Success
     description: Customer Success and Operationnal management.
     website: https://lumen.com/
     location: Paris, France
@@ -34,272 +34,107 @@ work:
         using **Horizontal Pod Autoscaler**
       - Built and maintained Restful API gateway using **Golang**
       - Set-up the Continuous Integration with lint, unit test and delivery process to ensure product quality
-    technologies:
-      - Rust
-      - Golang
-      - Google Cloud platform
-      - Kubernetes
-      - Linkerd
-      - Nginx Ingress Controller
-      - GCE Ingress Controller
-      - Kustomize
-      - Helm
-      - Thanos
-      - Prometheus
-      - Grafana
-      - Loki
-      - Kafka
-      - Flink
-      - Apache Druid
-      - Apache Superset
-      - Terraform
-      - Ansible
-      - Mozilla SOPS
-      - CircleCI
-  - company: Streamroot
-    position: Technical Product Manager
-    description: Product Manager for Compatibility and Product Owner for CDN Load Balancer.
+  - company: "Streamroot"
+    position: Technical Product Manager - Product Owner
+    description: Product Manager for Compatibility and Product Owner for CDN Load Balancer
     website: https://streamroot.io/
     location: Paris, France
     startDate: "2018-01"
     endDate: "2022-01"
     summary: >-
-      Responsible of the CDN Load Balancer product and the compatibility of our SDK across all product line.(Mesh delivery, eCDN, Load Balancer)
+      Responsible of the CDN Load Balancer product and the compatibility of our SDK across all product line.(Mesh delivery, eCDN, Load Balancer).
+      Product Owner of the Client team (Web plugins, Android and iOS SDKs, Windows/Xbox SDK), developing 3 different products in Scrum and Kanban.
     highlights:
-      - Set-up cloud architecture, from VPC, Firewall and Bastion to **Kubernetes** clusters and virtual machines
-      - Designed and built a tracker powered by **Rust** to match peers in a peer-to-peer network
-      - >-
-        Configured infrastructure to handle large traffic increase (5 to 10 times) in a short period of time (20-30 minutes)
-        using **Horizontal Pod Autoscaler**
-      - Built and maintained Restful API gateway using **Golang**
-      - Set-up the Continuous Integration with lint, unit test and delivery process to ensure product quality
-    technologies:
-      - Rust
-      - Golang
-      - Google Cloud platform
-      - Kubernetes
-      - Linkerd
-      - Nginx Ingress Controller
-      - GCE Ingress Controller
-      - Kustomize
-      - Helm
-      - Thanos
-      - Prometheus
-      - Grafana
-      - Loki
-      - Kafka
-      - Flink
-      - Apache Druid
-      - Apache Superset
-      - Terraform
-      - Ansible
-      - Mozilla SOPS
-      - CircleCI
-  - company: Streamroot
-    position: Media and SDK Engineer
-    description: Android developement in Kotlin and Javascript
-    website: https://streamroot.io/
-    location: Paris, France
-    startDate: "2017-09"
-    endDate: "2019-03"
-    summary: Development of an P2P SDK for OTT video data sharing on Android devices.
-    highlights:
-      - >-
-        Built and maintained Android SDK powered by **Google WebRTC** to
-        share OTT video data in a peer-to-peer network
-      - Migrated core features from Java to **kotlin** and **Coroutines**
-      - Reduced SDK memory foot print to support low end devices
-      - Set-up the Continuous Integration with lint, unit test and delivery process to ensure product quality
-      - Redesigned the customer API and documentation to simplify the SDK integration
-    technologies:
-      - Kotlin
-      - Coroutines
-      - Java
-      - Android SDK
-      - Javascript
-      - TypeScript
-      - CircleCI
-  - company: Solutions Medias 360
-    position: Senior Backend Developer
-    description: Backend developement in Java
-    website: "https://360.agency"
-    location: Montreal, Canada
-    startDate: "2016-09"
-    endDate: "2017-07"
+      - (PM) Product Roadmap & Vision
+      - (PM) Feature PRD writing and high level technical definitions
+      - (PM) KPIs definition and tracking
+      - (PM) Market and competitors research
+      - (PM) Creation of public documentation and materials for marketing and sales teams
+      - (PM) Creation of materials for internal knowledge sharing
+      - (PM) Product and technical (video streaming and player ecosystem) trainings to newcomers
+      - (PO) Weekly planning and daily follow-up
+      - (PO) Scrum events (Sprint Planning, Scrum Daily, Sprint Review, Sprint Retrospective)
+      - (PO) Backlog grooming
+      - (PO) Functional validation of features
+      - (PO) Release management
+      - (PO) Bugs qualification, prioritization and follow up
+  - company: "Netatmo"
+    position: Product Manager
+    description: Product Manager assistant for a new solution in partnership with Legrand.
+    website: https://www.cartier.com/
+    location: Boulogne-Billancourt, France
+    startDate: "2016-07"
+    endDate: "2017-06"
     summary: >-
-      Development of a Content Management System for car dealers.
+      Help managing the development of solution composed of new in-wall smart switches & power outlets.
+      They allows to remotely control lights, rolling shutters & home appliances from your smartphone or via voice control.
     highlights:
-      - Built and maintained API gateway powered by **GraphQL**
-      - Ensured high quality and well tested code delivered through code reviews and continuous integration
-      - Worked with the Agile and continuous delivery methodologies, following the industry’s best practices
-    technologies:
-      - Java
-      - Spring
-      - Hibernate
-      - JPA
-      - JUnit
-      - ElasticSearch
-      - MySQL
-      - GraphQL
-      - Git
-      - Maven
-      - Amazon-Web-Services
-  - company: Take Eat Easy
-    position: Senior Backend Developer
-    description: Backend developement in Java
-    location: Brussels, Belgium
-    startDate: "2015-10"
-    endDate: "2016-08"
+      - Coordination of the works of several teams of different trades
+      - Work with the hardware development team (mechanics & electronics)
+      - Work with the embedded software developmentn, backend & frontend teams
+      - Participate in the applications development & design (iOS & Android)
+      - Assist the supply chain & industrialization team
+  - company: "Cartier Horlogerie"
+    position: R&D Engineer - Test Manager
+    location: Suisse
+    startDate: "2014-08"
+    endDate: "2015-07"
     summary: >-
-      Development of a Content Management System for restaurants available for delivery. Orders and deliveries realtime tracking related features.
+      Improving tooling for watch part stamping.
     highlights:
-      - Built a new web application using micro service architecture for the live operations
-      - Improved and maintained custom content management system for restaurants and their menus
-      - Created a new invoicing system for our partners (restaurants, couriers and customers)
-    technologies:
-      - Java
-      - Spring
-      - Hibernate
-      - JPA
-      - TestNG
-      - Tomcat
-      - Mysql
-      - Git
-      - Maven
-      - Amazon-Web-Services
-  - company: Lampiris
-    position: Backend Developer
-    description: Backend developement in Java
-    website: "https://www.lampiris.be"
-    location: Liège, Belgium
-    startDate: "2014-07"
-    endDate: "2015-10"
-    summary: >-
-      Development of a billing application.
-    highlights:
-      - >-
-        Elaboration and implementation of an easily testable workflow system to separate
-        the different processes and avoid regressions
-      - Developed a dynamic export system to send invoices to various partners
-      - Developed integration test system to easily create relevant and powerful tests for each billing workflow
-    technologies:
-      - Java
-      - Spring
-      - Hibernate
-      - Apache Camel
-      - Junit
-      - JPA
-      - Postgresql
-      - JBoss
-      - Karaf
-      - Git
-      - Maven
-  - company: Silicon Brain
-    position: Junior Developer
-    description: Application and mobile developement in Delphi and Java
-    website: "https://www.silicon-brain.com/fr/"
-    location: Liège, Belgium
-    startDate: "2012-08"
-    endDate: "2014-07"
-    summary: >-
-      Development of an ERP application. Stock management and invoicing related features.
-    highlights:
-      - >-
-        Designed and implemented an android applications for stock management
-      - Developed specifics applications using Delphi
-      - Maintained ERP application with a very large code base
-    technologies:
-      - Delphi
-      - Ads
-      - Android SDK
-      - SQLite
-
+      - Increase the life of stamping tools by optimizing heat treatments, trying new steels and coatings - increase up to 3 times lifetime and reduction in machining costs.
+      - Research new technologies to achieve cleaning, annealing and lubrication of stamped components
 education:
-  - institution: Haute Ecole Libre Mosane – Saint-Laurent
-    location: Liège, Belgium
-    area: Business Computing
-    studyType: Bachelor's degree
-    startDate: "2008-09"
-    endDate: "2011-06"
-  - institution: Athénée Royal Ardennes - Hautes Fagnes
-    location: Stavelot, Belgium
-    area: Science
-    studyType: High school
-    startDate: "2001-09"
-    endDate: "2007-06"
+  - institution: "Toulouse Business School"
+    location: Toulouse, France
+    area: Management of Technological Innovation
+    studyType: Advanced Master
+    startDate: "2015-09"
+    endDate: "2016-07"
+  - institution: "ECAM Lyon"
+    location: Lyon, France
+    area: Ingénieur Arts et Métiers
+    studyType: Master's degree
+    startDate: "2009-09"
+    endDate: "2015-01"
+  - institution: Ecole professionnelle de Porrentruy
+    location: Porrentruy, Suisse
+    area: Introductory course in watchmaking
+    endDate: "2015-01"
 skills:
-  - name: Programming Languages
-    level: Master
-    keywords:
-      - Rust
-      - Kotlin
-      - Java
-      - Golang
-  - name: Rust Ecosystem
-    level: Master
-    keywords:
-      - Tokio
-      - Hyper
-      - Tungstenite
-      - Serde
-  - name: JVM Ecosystem
-    level: Master
-    keywords:
-      - Kotlin
-      - Coroutines
-      - Java
-      - Springboot
-      - Apache Camel
-  - name: Infrastructure
-    level: Master
-    keywords:
-      - Kubernetes
-      - Docker
-      - Terraform
-      - Ansible
-      - Google Cloud Platform
-      - Gitops
-  - name: Monitoring
-    level: Master
-    keywords:
-      - Thanos
-      - Prometheus
-      - Alertmanager
-      - Grafana
-      - Loki
-      - Linkerd
-  - name: Web Development
-    level: Master
-    keywords:
-      - REST
-      - SOAP
-      - GraphQL
-      - Json Web Tokens
-  - name: Databases
-    level: Master
-    keywords:
-      - PostgreSQL
-      - Mysql
-      - InfluxDB
-      - Redis
-  - name: Tooling
+  - name: "Computing"
     level: Master
     keywords:
       - Docker
-      - Git
-      - Gitops
-      - CircleCI
-  - name: Methodology
+      - HTML
+      - CSS
+      - JavaScript
+      - Git 
+  - name: "Software"
+    level: Master
+    keywords:
+      - Atlassian (Jira/Confluence)
+      - GitHub Projects
+      - aha!
+      - Figma
+      - MS Office
+      - CAO - SolidWorks, PTC Creo, Catia V5
+  - name: "Methodology"
     level: Master
     keywords:
       - Scrum
       - Kanban
-      - TDD
-      - Testing Strategy
 languages:
   - language: English
     fluency: Full professional
   - language: French
     fluency: Native or bilingual
+interests:
+  - name: Smart Home
+    keywords:
+      - Self-Hosting
+      - IoT
+  - name: Watchmaking
+  - name: Blacksmithing
 meta:
   theme: elegant
